# meridian

./: .gitattributes  .gitignore  COMMUNITY.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: board_request.md  bug_report.md  feature_request.md
.github/workflows/: test.yml
boards/: CubeOrange.toml  MatekH743.toml  MatekL431.toml  Pixhawk6X.toml  SpeedyBeeF405Wing.toml
boards/tier2/: BETAFPV-F405.toml  BeastH7.toml  BeastH7v2.toml  CubeBlack.toml  CubeYellow.toml  FoxeerH743v1.toml  JHEMCU-H743HD.toml  KakuteH7.toml  KakuteH7Mini.toml  KakuteH7v2.toml  MambaH743v4.toml  MatekH743-bdshot.toml  NxtPX4v2.toml  Pixhawk5X.toml  Pixhawk6C.toml  SuccexF4.toml  mRo-M10095.toml  mRoPixracerPro.toml
boards/tier3/: 3DR-L431-ASAUAV.toml  3DRControlZeroG.toml  ACNS-CM4Pilot.toml  ACNS-F405AIO.toml  AEDROXH7.toml  AEROFOX-H7.toml  AET-H743-Basic.toml  AIRBRAINH743.toml  AIRLink.toml  AR-F407SmartBat.toml  ARKV6X.toml  (+322 more)
crates/meridian-adsb/: Cargo.toml
crates/meridian-adsb/src/: lib.rs
crates/meridian-ahrs/: Cargo.toml
crates/meridian-ahrs/src/: lib.rs
crates/meridian-autotune/: Cargo.toml
crates/meridian-autotune/src/: lib.rs  tests.rs  tuner.rs
crates/meridian-bus/: Cargo.toml
crates/meridian-bus/src/: lib.rs
crates/meridian-camera/: Cargo.toml
crates/meridian-camera/src/: backend.rs  geotag.rs  lib.rs  tests.rs  trigger.rs
crates/meridian-can/: Cargo.toml
crates/meridian-can/src/: frames.rs  lib.rs  messages.rs  node.rs  sensors.rs
crates/meridian-comms/: Cargo.toml
crates/meridian-comms/src/: lib.rs  messages.rs  transport.rs  wire.rs
crates/meridian-control/: Cargo.toml
crates/meridian-control/src/: air_density.rs  attitude_controller.rs  lib.rs  notch_filter.rs  pid.rs  position_controller.rs  rate_controller.rs  sqrt_controller.rs  tecs.rs  tests.rs
crates/meridian-drivers/: Cargo.toml
crates/meridian-drivers/src/: accel_cal.rs  airspeed.rs  airspeed_cal.rs  airspeed_dlvr.rs  airspeed_ms4525.rs  airspeed_sdp3x.rs  baro_bmp280.rs  baro_dps310.rs  baro_ms5611.rs  baro_spl06.rs  battery_analog.rs  beacon.rs  compass_cal.rs  compass_ist8310.rs  compass_motor_comp.rs  compass_qmc5883l.rs  compass_rm3100.rs  external_ahrs_extras.rs  external_ahrs_vectornav.rs  gps_blend.rs  gps_dronecan.rs  gps_nmea.rs  gps_ublox.rs  gps_ubx_config.rs  imu_bmi088.rs  imu_bmi270.rs  imu_external_ahrs.rs  imu_icm426xx.rs  imu_invensense.rs  imu_invensensev2.rs  imu_lsm6dsv.rs  imu_tempcal.rs  imu_vibration.rs  lib.rs  optical_flow.rs  optical_flow_extras.rs  optical_flow_px4flow.rs  rangefinder.rs  rangefinder_benewake.rs  rangefinder_i2c.rs  (+3 more)
crates/meridian-ekf/: Cargo.toml
crates/meridian-ekf/src/: aiding.rs  airspeed_fusion.rs  core.rs  dcm.rs  flow_fusion.rs  fusion.rs  gps_blend.rs  gsf_yaw.rs  lib.rs  output.rs  params.rs  predict.rs  state.rs  vert_cf.rs
crates/meridian-failsafe/: Cargo.toml
crates/meridian-failsafe/src/: lib.rs
crates/meridian-fence/: Cargo.toml
crates/meridian-fence/src/: lib.rs
crates/meridian-fft/: Cargo.toml
crates/meridian-fft/src/: fft.rs  gyro_fft.rs  lib.rs  tests.rs
crates/meridian-gcs/: Cargo.toml
crates/meridian-gcs/src/: lib.rs  state.rs
crates/meridian-gripper/: Cargo.toml
crates/meridian-gripper/src/: lib.rs
crates/meridian-hal/: Cargo.toml
crates/meridian-hal/src/: analog.rs  can.rs  gpio.rs  i2c.rs  lib.rs  rc_input.rs  rc_output.rs  relay.rs  rtc.rs  scheduler.rs  spi.rs  storage.rs  uart.rs  util.rs
crates/meridian-heli/: Cargo.toml
crates/meridian-heli/src/: lib.rs
crates/meridian-landing-gear/: Cargo.toml
crates/meridian-landing-gear/src/: lib.rs
crates/meridian-log/: Cargo.toml
crates/meridian-log/src/: lib.rs
crates/meridian-math/: Cargo.toml
crates/meridian-math/src/: frames.rs  geodetic.rs  lib.rs  quaternion.rs  rotation.rs  vec3.rs
crates/meridian-mavlink/: Cargo.toml
crates/meridian-mavlink/src/: adapter.rs  lib.rs  log_download.rs  mavftp.rs  server.rs  signing.rs  v2.rs
crates/meridian-mission/: Cargo.toml
crates/meridian-mission/src/: lib.rs
crates/meridian-mixing/: Cargo.toml
crates/meridian-mixing/src/: lib.rs  motor_test.rs  spool.rs
crates/meridian-modes/: Cargo.toml
crates/meridian-modes/src/: fixed_wing.rs  lib.rs  mode_trait.rs  multirotor.rs  rover.rs  submarine.rs
crates/meridian-mount/: Cargo.toml
crates/meridian-mount/src/: backend.rs  lib.rs  manager.rs  mavlink.rs  servo.rs  siyi.rs  tests.rs
crates/meridian-nav/: Cargo.toml
crates/meridian-nav/src/: l1.rs  lib.rs  rally.rs  scurve.rs  smartrtl.rs  waypoint.rs
crates/meridian-notify/: Cargo.toml
crates/meridian-notify/src/: lib.rs
crates/meridian-osd/: Cargo.toml
crates/meridian-osd/src/: lib.rs
crates/meridian-parachute/: Cargo.toml
crates/meridian-parachute/src/: lib.rs
docs/: FULL_PARITY_AUDIT.md  MASTER_GCS_REVIEW.md  PANEL_MASTER_TODO.md  PANEL_WAVE1_SUMMARY.md  PARITY_GAP_MASTER.md  ardupilot_hal_audit.md  audit_all_boards.md  audit_board_configs.md  audit_build_test_deploy.md  audit_dronecan.md  audit_python_tests.md  audit_scripting_applets.md  audit_wave2_gcs_mavlink.md  audit_wave2_motors_battery.md  audit_wave2_rc_protocols.md  audit_wave2_vehicles.md  audit_wave3_advanced_nav.md  audit_wave3_osd_notify.md  audit_wave3_payload.md  audit_wave3_utilities.md  final_review_control_motors.md  final_review_drivers_protocols.md  final_review_ekf.md  final_review_modes_nav_safety.md  identification_comms_protocols.md  identification_core_flight.md  identification_payload_infra.md  identification_sensors_drivers.md  identification_vehicles_modes.md  panel_01_tridgell.md  panel_02_riseborough.md  panel_03_hall.md  panel_04_mackay.md  panel_05_barker.md  panel_06_wurzburg.md  panel_07_premerlani.md  panel_08_aparicio.md  panel_09_munns.md  panel_10_white.md  panel_11_koopman.md  (+29 more)
gcs/: README.md
tools/: hwdef-to-toml.py  meridian-pack.py
vehicles/: boat-differential.toml  fixed-wing.toml  hex-x.toml  octo-x.toml  quad-plus.toml  quad-x.toml  rover-ackermann.toml  rover-skid.toml  sub-6dof.toml  vtol-quadplane.toml
(+88 files in other folders)
