[package]
name = "meridian-control"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cascaded attitude, rate, and position controllers with PID"

[dependencies]
meridian-math = { workspace = true }
meridian-types = { workspace = true }
meridian-bus = { workspace = true }
meridian-mixing = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-bus/std", "meridian-mixing/std"]
