[package]
name = "meridian-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sensor driver implementations — IMU, GNSS, mag, baro, rangefinder"

[dependencies]
meridian-types = { workspace = true }
meridian-math = { workspace = true }
meridian-hal = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-hal/std"]

[lints]
workspace = true
