[package]
name = "meridian-fence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Geofence — polygons, cylinders, inclusion/exclusion zones"

[dependencies]
meridian-math = { workspace = true }
meridian-types = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = ["meridian-types/std"]

[lints]
workspace = true
