[package]
name = "meridian-fft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time FFT on gyro data for vibration analysis and notch filter tuning"

[dependencies]
meridian-types = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = ["meridian-types/std"]

[lints]
workspace = true
