[package]
name = "meridian-gripper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gripper — servo + EPM backends, grab/release state machine"

[dependencies]
meridian-types = { workspace = true }
meridian-hal = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-hal/std"]

[lints]
workspace = true
