[package]
name = "meridian-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware abstraction traits — no implementations, only interfaces"

[dependencies]
meridian-types = { workspace = true }
meridian-bus = { workspace = true }
heapless = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-bus/std"]

[lints]
workspace = true
