[package]
name = "meridian-landing-gear"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Landing gear — deploy/retract servo, altitude triggers, WoW sensor"

[dependencies]
meridian-types = { workspace = true }
meridian-hal = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-hal/std"]

[lints]
workspace = true
