[package]
name = "meridian-math"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quaternions, vectors, matrices, rotations, coordinate frames — with type-level safety"

[dependencies]
num-traits = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = []

[lints]
workspace = true
