[package]
name = "meridian-mission"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Behavior tree mission engine — arena-allocated, no_std compatible"

[dependencies]
meridian-types = { workspace = true }
meridian-bus = { workspace = true }
meridian-modes = { workspace = true }
heapless = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-bus/std", "meridian-modes/std"]

[lints]
workspace = true
