[package]
name = "meridian-mount"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gimbal/mount control — servo, MAVLink, and Siyi binary protocol backends"

[dependencies]
meridian-types = { workspace = true }
meridian-hal = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-hal/std"]

[lints]
workspace = true
