[package]
name = "meridian-nav"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L1 guidance, waypoint navigation, spline paths, terrain following"

[dependencies]
meridian-math = { workspace = true }
meridian-types = { workspace = true }
meridian-bus = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[features]
default = []
std = ["meridian-types/std", "meridian-bus/std"]
